# forex-bot

./: .env.example  .gitignore  DEPLOY.md  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: apps-image.yml  ci.yml  eval-nightly.yml  eval-weekly.yml  infra.yml  sidecar-image.yml
apps/agent-runner/: Dockerfile  package.json
apps/agent-runner/src/: index.ts  main.ts  (+4 more)
apps/data-ingest/: package.json
apps/eval-event-study/: package.json
apps/eval-replay/: package.json
apps/paper-runner/: Dockerfile  package.json
infra/terraform/: README.md
mt5-sidecar/: .dockerignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
mt5-sidecar/src/mt5_sidecar/: __main__.py  adapter.py  mappings.py  server.py
mt5-sidecar/tests/: conftest.py  test_adapter.py  test_health.py  test_login.py  test_reconnect.py  test_server.py  test_smoke.py
prd/: 2026-04-21-forex-bot-design.md
prd/plans/: 2026-04-21-forex-bot-foundations.md  2026-04-25-forex-bot-mt5-bridge.md  2026-04-28-forex-bot-data-layer.md  2026-04-29-forex-bot-agent-graph.md  2026-04-30-forex-bot-eval.md  2026-05-06-forex-bot-infra-base.md  2026-05-06-forex-bot-sidecar-deploy.md  2026-05-08-forex-bot-app-deploy.md
prd/specs/: 2026-05-03-forex-bot-infra-base-design.md  2026-05-06-forex-bot-sidecar-deploy-design.md  2026-05-08-forex-bot-app-deploy-design.md
proto/: mt5.proto
scripts/: build-event-fixtures.ts  dev-up.sh  run-agent.sh  run-eval-events.sh  run-eval-replay.sh  run-mt5.sh  run-paper.sh
scripts/lib/: load-env.sh
(+65 files in other folders)
