[project]
name = "mt5-sidecar"
version = "0.0.0"
description = "MT5 gRPC sidecar for forex-bot"
requires-python = ">=3.12"
dependencies = [
  "grpcio>=1.66.0",
  "protobuf>=5.27.0",
]

[project.optional-dependencies]
mt5 = ["MetaTrader5>=5.0.45"]
dev = [
  "grpcio-tools>=1.66.0",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[project.scripts]
mt5-sidecar = "mt5_sidecar.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mt5_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
